Fix invisible checked linked buttons

--- a/src/gtk3/common/scss/gtk-widgets/_linked.scss
+++ b/src/gtk3/common/scss/gtk-widgets/_linked.scss
@@ -22,6 +22,11 @@
       background-color: $color_theme_2;
       color: $inverse_fg_color;
       border-image: none;
+      
+      &:backdrop {
+        background-color: to400($color_theme_2);
+        border-image: none;
+      }
     }
   }
   
